--- a/index.html
+++ b/index.html
@@ -60,11 +60,6 @@
                 <video id="penguin-sledding" autoplay loop="true" src="penguin-sledding.mp4"></video>
             </a-assets>
 
-            
-            <!-- <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
-            <a-video src="airbending.mp4"></a-video> -->
-
-
             <!-- 360-degree image. 第一个显示在页面上的全景图-->
             <a-sky id="image-360" radius="10" src="#city"
                 animation__fade="property: components.material.material.color; type: color; from: #FFF; to: #000; dur: 300; startEvents: fade"
@@ -79,13 +74,14 @@
 
             </a-entity>
 
-            <!-- Camera + cursor. -->
-            <!-- <a-entity movement-controls="speed: 0.15" position=" 0 0 6"> -->
-
-            <!-- <a-entity position="3 1 -3" geometry="primitive: sphere; width: 1" material="color: red"></a-entity> -->
-            <!-- <a-entity id="HotSpotBtn1" position="3 1 -3" 
-            geometry="primitive: circle; segmentsDepth:1 depth:1 width: 1" material="color: red"></a-entity> -->
-
+            <!-- circle for interaction -->
+            <a-entity>
+                <a-circle position="1 0.75 -3" radius="0.5" color="#FFC65D"
+                event-set__enter="_event: mouseenter; _target: #cylinderText; visible: true"
+                event-set__leave="_event: mouseleave; _target: #cylinderText; visible: false">
+                <a-box id="cylinderText" visible="false" position="0 -0.55 0.55" material="color: #333"></a-box>
+            </a-circle>
+            </a-entity>
 
             <a-entity camera look-controls>
                 <a-cursor id="cursor"
